# nndb

./: .gitignore  Cargo.toml  README.md  build.rs  config-dev.toml  config.toml  justfile
.cargo/: config.toml
.sqlx/: query-0455ef5e95a5c77003aaafd256fd4d23779cca152fd977b1423cab136a463f28.json  query-21ce7eb4e9bfd1b73fa3c5e387cdbf9c7106efdc056342ab12f6fcf757a217b9.json  query-245ee60ede10a17018c080e6bc72611e7c21fc9e396a2a035932a9588e50ee4b.json  query-2b6c31ec536bea3fbd59d03bdf2d31c78bbe0a46d702e9655c2593a18cdc863f.json  query-2bc79bcf9383eefbd4781a9dbae888af7a3455c4637c698f483102953810d0a2.json  query-3100442839fd75fc8ac4c06ea9c95d6b324c4f3ade17fa41d90a8fe543a9bdbd.json  query-36caff45ded743d408f281adfd389e4e6370fdea48797d16721a3b80cc97af8b.json  query-3e753876e76e583b885ff230295b220dcb672179d37d49f07b08571cf3421268.json  query-5732d1802a28367d060cd820d2b141203fe1f587faf898e3498fab221e1ad64b.json  query-57a7d33f0d1b3cde5c3d2a4228bdc8aeacf46e5902fa3219ecbb0b826e1b145b.json  query-5c0299c95fee29945c4a8b7bd435ff840dff9a07655a25834599bc75ca5c54b6.json  query-67a623898683f3209b620a16e031a24adedc0dd823f7ead66249cd4bbb3d9bf0.json  query-6ec10d12c3c11ea4393b99fd254eed08ed181911c0886a2486402498cc6fad3e.json  query-731991bf90b88eec7d850c76e40a27072ba42f8f9bca73beceab1ca72ef4a7b5.json  query-74df5f79edcab1925a370c62c37fbb9154bd53ac0ee0da8b084b134188f6d032.json  query-7ff422f9a493141bffc900a216eee0a00653cbebdb2c39b99909f02794930ea0.json  query-82f6a9aaf6fa5ce423e0db9d1223a7f32d1ef4a095f8896d2e21f16c1724e2d9.json  query-85ed255c0172ec6f792995d473d09bd3c2c1e1c66feb5c4339eaec5d34143f33.json  query-a8c973f274a09568b7771f00dfb4eb3100dff0a4706f08cfd07bc65b3ca5d85d.json  query-ae6cf0983e07137f4f821a49eb626930ac22d428630eaad427e381dbf4a83131.json  query-be77d07403cac42d235deda960f169d10d3424c2770dbf6026d692261744b5ae.json  query-d0ab59a8732f08b14d721ee1d7ac878c0a7dc34b72f2a4616e1d02551b8d41a9.json  query-df6eb7b4e8de5042e68b90dafad9438eda11dc20675c9771e4cbd169a6e43e23.json
backend/: Cargo.toml
backend/migrations/: 20231024132552_use_file_time.sql  20231024155648_store_raw_sd_metadata.sql  20231027172845_add_raw_pixiv_meta.sql
backend/src/: config.rs  main.rs  service.rs  util.rs
backend/src/api/: convert.rs  macros.rs  mod.rs
backend/src/dao/: mod.rs  schema.md  sqlitex.rs
backend/src/dao/sqlite/: migrate.rs  mod.rs
backend/src/import/: mod.rs  novelai.rs  pixiv.rs  unknown.rs  webui.rs
backend/src/model/: danbooru.rs  mod.rs  read.rs  write.rs
backend/src/view/: api.rs  dashboard.rs  element.rs  index.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  model.rs  rest.rs  search.rs
common/src/metadata/: mod.rs  novelai.rs  pixiv.rs  webui.rs
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: api.rs  app.rs  main.rs  route.rs
frontend/src/component/: element.rs  input.rs  link.rs  metadata.rs  mod.rs  paginator.rs  tag.rs
frontend/src/page/: dashboard.rs  element.rs  index.rs  mod.rs  tag.rs
migrations/: 20230519202646_init.sql  20230531220249_danbooru_wiki.sql  20230531220249_tag_alias.sql
src/: config.rs  main.rs  search.rs  service.rs  util.rs
src/dao/: mod.rs  sqlite.rs  sqlite_up.sql  sqlitex.rs
src/import/: mod.rs  novelai.rs  passthrough.rs  pixiv.rs  unknown.rs  webui.rs
src/model/: danbooru.rs  mod.rs  read.rs  write.rs
src/view/: api.rs  dashboard.rs  element.rs  index.rs  mod.rs  tag.rs
static/: styles.css
ts/: autocomplete.ts  cross.ts  dashboard.ts  log.ts  script.ts  util.ts
