[package]
name = "nndb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
swc_common = { version = "0.31.1", features = ["tty-emitter"] }
swc_ecma_codegen = "0.138.5"
swc_ecma_parser = "0.133.4"
swc_ecma_transforms_base = "0.126.5"
swc_ecma_transforms_typescript = "0.176.6"
swc_ecma_visit = "0.89.1"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
anyhow = { version = "1.0.70", features = ["backtrace"] }
async-trait = "0.1.68"
bytemuck = "1.13.1"
chrono = "0.4.24"
crc32fast = "1.3.2"
enum-iterator = "1.4.0"
futures = "0.3.28"
image = { version = "0.24.6" }
image-match = { git = "https://github.com/alt-text-org/image-match-rs", version = "0.1.0", features = ["img", "image", "num"] }
itertools = "0.10.5"
maud = { git = "https://github.com/nikvoid/maud", features = ["actix-web", "actix-web-dep"] }
md-5 = "0.10.5"
num_enum = "0.6.0"
once_cell = "1.17.1"
png = "0.17.8"
rayon = "1.7.0"
regex = "1.7.3"
rusqlite = { version = "0.29.0", features = ["chrono", "bundled", "array"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_qs = { version = "0.12.0", features = ["actix4"] }
tokio = { version = "1.27.0", features = ["sync", "rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.3"
tracing-subscriber = "0.3.16"
walkdir = "2.3.3"
