[package]
name = "nndb-backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = "0.1.68"
atomic = "0.5.3"
bytemuck = "1.13.1"
chrono = { workspace = true, features = ["serde"] }
enum-iterator = { workspace = true }
futures = "0.3.28"
image = { version = "0.24.6" }
image-match = { git = "https://github.com/alt-text-org/image-match-rs", rev = "2788c49387ac95d25b0d9b7d6123f185eb917e19", features = ["img", "image", "num"] }
itertools = { workspace = true }
kakasi = "0.1.0"
md-5 = "0.10.5"
moka = { version = "0.11.1", default-features = false, features = ["future"] }
nndb-common = { workspace = true, features = ["backend"] }
once_cell = { workspace = true }
parking_lot = "0.12.1"
pixivcrab = "0.5.1"
png = "0.17.8"
rayon = "1.7.0"
regex = { workspace = true }
reqwest = { version = "0.11.18", features = ["json", "gzip", "deflate", "cookies"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { version = "0.12.0", features = ["actix4"] }
sqlx = { workspace = true, features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = { version = "1.27.0", features = ["sync", "rt-multi-thread", "macros", "fs"] }
toml = "0.7.4"
tracing = "0.1.37"
tracing-actix-web = "0.7.3"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["alloc", "fmt", "registry", "sharded-slab", "smallvec", "std", "thread_local", "tracing-log"] }
walkdir = "2.3.3"

