[package]
name = "nndb-common"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] } 
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
once_cell = { workspace = true }

[features]
backend = ["dep:sqlx"]
