[package]
name = "nndb-frontend"
version = "0.1.0"
edition = "2021"
description = "nndb frontend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { workspace = true }
console_error_panic_hook = "0.1.7"
enum-iterator = { workspace = true }
futures = "0.3.28"
gloo = { version = "0.9.0", default-features = false, features = ["timers", "net"] }
nndb-common = { workspace = true }
serde = { workspace = true }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = { version = "0.4.37", features = ["futures-core"] }
yew = { version="0.20", features=["csr"] }
yew-router = "0.17.0"

[dependencies.web-sys]
version = "0.3.64"
features = [ 
  "HtmlImageElement", 
  "Window", 
  "DomRect", 
  "KeyboardEvent",
]
